Localization for Hawaii's focus tree is done!

--- a/localisation/KR_Hawaii_l_english.yml
+++ b/localisation/KR_Hawaii_l_english.yml
@@ -56,93 +56,94 @@ HAW_thriving_economy_desc:0 "We have done it, our economy is now booming. We hav
 
 ### Navy Foci ###
 HAW_navy:0 "Hawai'ian Navy"
-HAW_navy_desc:0 ""
+HAW_navy_desc:0 "We are an island nation and surrounded by water. For us to survive in the world we need to build up the Hawai'ian navy and prepare it to defend our islands."
 HAW_submarine_doctrines:0 "Submarine Doctrines"
-HAW_submarine_doctrines_desc:0 ""
+HAW_submarine_doctrines_desc:0 "Some within the navy suggest that the best way for the navy to operate is to rely on Submarines. Submarines were proven to be an effective tool of war during the First Weltkrieg and we would be foolish not to use them."
 HAW_submarine_focus:0 "Submarine Focus"
-HAW_submarine_focus_desc:0 ""
+HAW_submarine_focus_desc:0 "As part of our plan to focus on Submarines we should work on building up and modernizing our Submarine fleet so that way no one can avoid attack our islands. "
 HAW_grand_navy:0 "Hawai'ian Grand Navy"
-HAW_grand_navy_desc:0 ""
-HAW_escorts:0 "Escorts"
-HAW_escorts_desc:0 ""
+HAW_grand_navy_desc:0 "Many of the admirals were part of the United States Asiatic Fleet before the chaos of the civil war engulfed the mainland. Now that we are independent many of them suggest making the Hawai'ian navy a grand navy."
+HAW_escorts:0 "Protecting our Trade"
+HAW_escorts_desc:0 "Regardless of the naval plan that we go with we need to have escorts to protect our maritime trade. As an island nation we need to protect our trade and support our convoys. "
 HAW_hawaiian_marines:0 "Hawai'ian Marines"
-HAW_hawaiian_marines_desc:0 ""
+HAW_hawaiian_marines_desc:0 "We have a number of people whom were trained in the United States Marine Corps in our island and they have come wishing to create the Hawai'ian Marines. Hawai'i as an island nation will need her own marine corp to help defend the many islands that make up our country. "
 HAW_improve_our_fleet:0 "Improve Our Fleet"
-HAW_improve_our_fleet_desc:0 ""
+HAW_improve_our_fleet_desc:0 "As our grand navy improves we need to modernize and improve our fleet. Hawai'i deserves the best navy that we can produce. A large and grand navy will do just fine for our island nation."
 HAW_fleet_in_being:0 "Fleet in Being"
-HAW_fleet_in_being_desc:0 ""
+HAW_fleet_in_being_desc:0 "Our navy should be prepared to meet any and all the enemies of Hawai'i out at sea and destroy them without them ever arriving near our islands and force them to flee back to their home ports."
 HAW_trade_interdiction:0 "Trade Interdiction"
-HAW_trade_interdiction_desc:0 ""
+HAW_trade_interdiction_desc:0 "As we lie in the middle of the Pacific and trade flows through our area if we are to go to war we should focus on crippling the trade of the enemies of Hawai'i. This can help stop any potential invasion of our islands."
 HAW_carriers:0 "Carrier Support"
-HAW_carriers_desc:0 ""
+HAW_carriers_desc:0 "With our navy being modernized, time has come to focus on Aircraft Carriers. Carriers will be one of the major tools of defending our island from attack. "
 
 ### Army Foci ###
 HAW_army:0 "Hawai'ian National Guard"
-HAW_army_desc:0 ""
-HAW_focus_on_planning:0 "High Command"
-HAW_focus_on_planning_desc:0 ""
+HAW_army_desc:0 "We shall form the Hawai'ian National Guard. While Hawai'i will not be an expansionist power we will train the people to better defend our islands from any threat that comes and so that Hawai'i remains free from all enemies. "
+HAW_focus_on_planning:0 "Joint Chiefs of Staff"
+HAW_focus_on_planning_desc:0 "The main battle strategy of defending Hawai'i will be a joint chiefs of staff. They shall convene and plan out any and all defenses for Hawai'i. "
 HAW_superior_fire_power:0 "Superior Fire-Power"
-HAW_superior_fire_power_desc:0 ""
-HAW_honolulu_rifles:0 "Modernised Guns"
-HAW_honolulu_rifles_desc:0 ""
-HAW_military_factories:0 "Military Build-Up"
-HAW_military_factories_desc:0 ""
+HAW_superior_fire_power_desc:0 "Hawaii may be a set of individual islands but we have spirit and we shall fight hard. To that end we should rely on the doctrine of Superior Fire-power to defend our islands. We can make and import guns, artillery and ammunition but our lives are expensive. So let us save Hawai'ian lives through superior firepower."
+HAW_honolulu_rifles:0 "Modernized Guns"
+HAW_honolulu_rifles_desc:0 "As we build up our army we should focus on modernizing our guns and building up domestic firearm trade. This will help make sure that we have the best guns that we can have for our troops. "
+HAW_military_factories:0 "Domestic Firearm Trade"
+HAW_military_factories_desc:0 "To protect Hawai'i we should focus on building up our domestic firearm and military trade. With native Hawai'ian military industries we will be able to better defend our country from any invasion."
 HAW_strategic_information_services:0 "Strategic Information Services"
+HAW_strategic_information_services_desc:0 "To protect the islands we should form the Strategic Information Services. They shall be our intelligence services and will help make sure that no saboteurs shall come to our islands."
 HAW_new_army:0 "A Modern Army"
-
+HAW_new_army_desc:0 "To build and modernize our army further we shall work on researching modern firearms for our soldiers. As the wars advance we shall keep up with the times to keep our islands safe. "
 ### Air Foci ###
-HAW_airforce:0 "Create the Hawai'ian Air-Force"
-HAW_airforce_desc:0 ""
+HAW_airforce:0 "Hawai'ian Air-Force"
+HAW_airforce_desc:0 "To help defend our islands we shall create the Hawai'ian Air Force. The Airforce shall keep our skies free from any and all threats to our islands. "
 HAW_fighters:0 "Favour Fighters"
-HAW_fighters_desc:0 ""
+HAW_fighters_desc:0 "The focus of our Air Force should be on Fighters. Fighters will keep the our skies clear of all enemies who would seek to harm Hawai'i. "
 HAW_close_air_support:0 "Close Air Support"
-HAW_close_air_support_desc:0 ""
+HAW_close_air_support_desc:0 "To support our troops we shall work with close air support. This will help protect our troops if any invaders come to our islands."
 HAW_bombers:0 "Favour Bombers"
-HAW_bombers_desc:0 ""
+HAW_bombers_desc:0 "The focus of our Air Force shall be on Bombers. The bombers will destroy any enemies that happen to arrive on our islands. "
 HAW_naval_bombers:0 "Naval Bombers"
-HAW_naval_bombers_desc:0 ""
+HAW_naval_bombers_desc:0 "As we are likely to face the enemy at sea first before they come to our island we should focus on naval bombers to blow them out of the water before any invasion of our country can happen."
 HAW_expand_airports:0 "Expand Air-Ports"
-HAW_expand_airports_desc:0 ""
+HAW_expand_airports_desc:0 "As we build up our air force we should focus on expanding our airports and making sure that all the islands in our nation have some airports for our air force."
 HAW_hawaiian_jets:0 "Hawai'ian Jets"
-HAW_hawaiian_jets_desc:0 ""
+HAW_hawaiian_jets_desc:0 "The future of aircraft is jets and we should invest our research in jet technology. Jets along with rockets will help keep our islands safer and make our planes far better at defending Hawai'i. "
 HAW_radar:0 "Warning Systems"
-HAW_radar_desc:0 ""
+HAW_radar_desc:0 "We need to focus on Several Warning systems to help better protect Hawai'i from any income air forces that will attack. A sudden attack could be devastating to our country but if we are aware of what will come we can keep our people safe. "
 
 ### Foreign Policy Foci ###
 HAW_foreign:0 "Foreign Policy"
-HAW_foreign_desc:0 ""
+HAW_foreign_desc:0 "Now that our government has been finalized we should look to the future and seek allies to protect our Nation. Hawai'i is small and many larger nations would find it easy to conquer us. To avoid that we should seek allies. "
 HAW_american_protectorate:0 "American Protectorate"
-HAW_american_protectorate_desc:0 ""
+HAW_american_protectorate_desc:0 "Before the civil war on the mainland, Hawai'i was part of the United States as a territory. While we shall remain a free and independent nation we should work with the newely created League of American States."
 HAW_american_business:0 "American Business Ties"
-HAW_american_business_desc:0 ""
+HAW_american_business_desc:0 "Now that we are members of the League of American States we should forge better economic ties with the Americans. This will help the economy of both Hawai'i and America. "
 HAW_american_freindship:0 "American Friendship"
-HAW_american_freindship_desc:0 ""
+HAW_american_freindship_desc:0 "Now that we are part of the League of American States we should work on improving our relations with the Americans and help resolve the issues that we have in the past. "
 HAW_american_tech_sharing:0 "University of the Free World"
-HAW_american_tech_sharing_desc:0 ""
+HAW_american_tech_sharing_desc:0 "Now that we are fully part of the League of American States, we should join the University of the Free World. This program will help better educate the people of Hawai'i for the future and do our part in keeping the Americas safe."
 HAW_international:0 "Join the International"
-HAW_international_desc:0 ""
+HAW_international_desc:0 "With the revolution now complete and the workers now in charge of Hawai'i it is only natural that we petition the French to invite us into the International. This way we shall do our part in fighting capitalism world wide. "
 HAW_revolutionary_business:0 "Revolutionary Trade"
-HAW_revolutionary_business_desc:0 ""
+HAW_revolutionary_business_desc:0 "Now that we are part of the International we should work on establishing trade with the other members of the International. Though far away we can still help the workers of Europe and beyond from Hawai'i. "
 HAW_international_ties:0 "Ties with the International"
-HAW_international_ties_desc:0 ""
+HAW_international_ties_desc:0 "As we have just recently had our revolution it would do good to form better relations with the many countries part of the International. "
 HAW_international_tech_sharing:0 "Join the Phalanstere"
-HAW_international_tech_sharing_desc:0 ""
+HAW_international_tech_sharing_desc:0 "Now that we are full and respected members of the International, we should do our small part to help advance the science of the world by joining the Phalanstere. "
 HAW_join_canada:0 "Join the Entente"
-HAW_join_canada_desc:0 ""
+HAW_join_canada_desc:0 "We should ally with the Canadians and their Entente. We have always had good relations with the british and we should further that bond by joining the Entente. "
 HAW_entente_business:0 "Entente Business Ties"
-HAW_entente_business_desc:0 ""
+HAW_entente_business_desc:0 "To Further our ties with the members of the Entente we should sign a trade agreement. This will help the various members of the British Empire and Hawai'i both prosper."
 HAW_entente_friendship:0 "Entente Friendship"
-HAW_entente_friendship_desc:0 ""
+HAW_entente_friendship_desc:0 "To further our ties with the Entente we should sign a treaty of friendship with the various members of the alliance. We are small but we want to show that we shall do our part in helping the Entente. "
 HAW_join_isac:0 "Join ISAC"
-HAW_join_isac_desc:0 ""
+HAW_join_isac_desc:0 "Now that we are full and respected members of the Entente we should seek to join ISAC(The Imperial Scientific and Academic Council). By joining ISAC we shall help add to the scientific knowledge of the Entente. "
 HAW_join_japan:0 "Join Japan"
-HAW_join_japan_desc:0 ""
+HAW_join_japan_desc:0 "We should seek to join the Japanese Empire. We have always had connections with the Japanese Empire in the past particularly when we were a kingdom. Now that we are once again independent nation let us rekindle these ties. "
 HAW_japanese_business:0 "Japanese Business Ties"
-HAW_japanese_business_desc:0 ""
+HAW_japanese_business_desc:0 "We should seek a trade agreement between the Japanese businesses and our own business interests. Such a trade agreement can only help to bring prosperity to both nations. "
 HAW_japanese_friendship:0 "Japanese Friendship"
-HAW_japanese_friendship_desc:0 ""
+HAW_japanese_friendship_desc:0 "Let us sign a treaty of friendship with the Japanese to show them that we are committed to their Greater East Asian Co-Prosperity Sphere project. Friendship between both nations can only bring good things. "
 HAW_japanese_tech_sharing:0 "Join Rikagaku Kenkyusho"
-HAW_japanese_tech_sharing_desc:0 ""
+HAW_japanese_tech_sharing_desc:0 "Now that we are full and respected members of the Greater East Asian Co-Prosperity Sphere we should look at joining the Rikagaku Kenkyusho, the scientific wing of the Co-Prosperity Sphere. This will let us add our small part to the Scientific knowledge of East Asia. "
 
 ### Parties ###
 HAW_totalist_party:0 "HCP"
