Some localization improvements for Hawaii's Japanese section.

--- a/localisation/KR_Hawaii_l_english.yml
+++ b/localisation/KR_Hawaii_l_english.yml
@@ -137,13 +137,13 @@ HAW_entente_friendship_desc:0 "To further our ties with the Entente we should si
 HAW_join_isac:0 "Join ISAC"
 HAW_join_isac_desc:0 "Now that we are full and respected members of the Entente we should seek to join ISAC(The Imperial Scientific and Academic Council). By joining ISAC we shall help add to the scientific knowledge of the Entente. "
 HAW_join_japan:0 "Join Japan"
-HAW_join_japan_desc:0 "We should seek to join the Japanese Empire. We have always had connections with the Japanese Empire in the past particularly when we were a kingdom. Now that we are once again independent nation let us rekindle these ties. "
+HAW_join_japan_desc:0 "We should seek to enter Japan's sphere of protection. We had connections to the the Japanese when we were a kingdom, united by our common desire to resist Western imperialism, and further spurred by a wave of immigration. Now that we are once again independent let us rekindle these ties. "
 HAW_japanese_business:0 "Japanese Business Ties"
-HAW_japanese_business_desc:0 "We should seek a trade agreement between the Japanese businesses and our own business interests. Such a trade agreement can only help to bring prosperity to both nations. "
+HAW_japanese_business_desc:0 "We should seek a trade agreement to promote business between Japanese Zaibatsu and our own companies. Such a trade agreement can only help to bring prosperity to both nations. "
 HAW_japanese_friendship:0 "Japanese Friendship"
-HAW_japanese_friendship_desc:0 "Let us sign a treaty of friendship with the Japanese to show them that we are committed to their Greater East Asian Co-Prosperity Sphere project. Friendship between both nations can only bring good things. "
-HAW_japanese_tech_sharing:0 "Join Rikagaku Kenkyusho"
-HAW_japanese_tech_sharing_desc:0 "Now that we are full and respected members of the Greater East Asian Co-Prosperity Sphere we should look at joining the Rikagaku Kenkyusho, the scientific wing of the Co-Prosperity Sphere. This will let us add our small part to the Scientific knowledge of East Asia. "
+HAW_japanese_friendship_desc:0 "Let us sign a treaty of friendship with the Japanese to show that we are committed to their Greater East Asian Co-Prosperity Sphere project. Closer ties between both nations can only bring good things. "
+HAW_japanese_tech_sharing:0 "Join Rikagaku Kenkyūsho"
+HAW_japanese_tech_sharing_desc:0 "Now that we are full and respected members of the Greater East Asian Co-Prosperity Sphere we should look at joining the Rikagaku Kenkyūsho, the scientific wing of the Co-Prosperity Sphere. This will let us add our small part to the scientific knowledge of East Asia."
 
 ### Parties ###
 HAW_totalist_party:0 "HCP"
