Some more stuff for ETH

--- a/localisation/KR_Ethiopia_l_english.yml
+++ b/localisation/KR_Ethiopia_l_english.yml
@@ -1,5 +1,8 @@
 ﻿l_english:
 
+## Development Tooltips ##
+ETH_Under_Dev:0 "This branch is currently under development. Use with caution!"
+
 ### Ideas ###
 ETH_black_monday:0 "Black Monday in Ethiopia"
 ETH_black_monday_desc:0 "Even down here in Africa, Black Monday has affected us badly. The situation is made worse by our old and inefficient methods of production."
@@ -136,8 +139,8 @@ ETH_Anti_Air:0 "Death to the Skies!"
 ETH_Anti_Air_desc:0 "Another step in our 'consolidation' is to control the skies. We must build limited anti-air capabilities to compliment our brave air force."
 ETH_Radar_C:0 "Radar"
 ETH_Radar_C_desc:0 "Using new RADAR capabilities we are able to better defend ourselves - ideal!"
-ETH_Commit_Self:0 "Commit Only to Ourselves"
-ETH_Commit_Self_desc:0 "We have decided we don't need the support of a major nation, and we instead prefer to neutral."
+ETH_Commit_Self:0 "An Increasingly Inwards Viewpoint"
+ETH_Commit_Self_desc:0 "Our work on fortifications and consolidation of Ethiopia has meant that the viewpoint of our populace has become increasingly inwards-focused. If we continue down this path, our people will loose the desire to liberate Africa, and instead prefer to build their buildings taller than ever before."
 ETH_Proj_Exc:0 "Project Excavate"
 ETH_Proj_Exc_desc:0 "The Weltkrieg was based around trench warfare. Times may have changes, but there is no reason this tactic shouldn't work now, is there?"
 ETH_Fixed_Arty:0 "Fixed-Place Artillery"
@@ -150,6 +153,8 @@ ETH_Non_Agression:0 "Non-Aggression and Furthered Consolidation"
 ETH_Non_Agression_desc:0 "We have no plans to invade our neighbours at this stage, so we should instead focus our internal reforms."
 ETH_Ger_Q:0 "The German Question"
 ETH_Ger_Q_desc:0 "Germany is weak - fighting the Syndicalists and its economy. We must now decided if we need to continue our relations with them."
+ETH_GER_Sp:0 "We must not have strengthened bonds with Germany"
+ETH_GER_Cut_Ties:0 "We will cut our formal ties with Germany, locking us out of a friendhip with Germany. Choose wisely!"
 ETH_Seize_Ger_Som:0 "Seize German Somaliland"
 ETH_Seize_Ger_Som_desc:0 "The Germans took land that was rightly ours in the first Weltkrieg. We must now take it back from them!"
 ETH_Intergrate_Ger_Som:0 "Integrate German Somaliland"
@@ -172,6 +177,8 @@ ETH_ENT_Offer_dec:0 "Our strategic placement has come to the attention of the En
 ETH_ENT_Interests:0 "The Entente has developed an interest in our country"
 ETH_GER_Sphere:0 "The German Sphere of Influence"
 ETH_GER_Sphere_desc:0 "We are positioned in an area that Germany believes is their sphere of influence. They wish to further relations with us for that reason."
+ETH_GER_Qu:0 "We have not decided to cut our ties with Germany."
+ETH_GER_Strong_Ties:0 "We will strengthen our ties with Germany, locking us out of the PanAfrican dream chain. Choose wisely!"
 ETH_GER_Interests:0 "Germany has developed an interest in our country"
 ETH_OTT_Rel:0 "Ethiopian-Ottoman Relations"
 ETH_OTT_Rel_desc:0 "The Ottoman Empire is interested in the development of relations with us, especially due to our placement at the southern border of their possible enemy, Egypt."
