--- a/localisation/KR_Political_l_english.yml
+++ b/localisation/KR_Political_l_english.yml
@@ -41,106 +41,101 @@ economic_health:0 "Economic Health WIP!!!"
 EFFECT_CHANGE_LAW_stability:0 "Change our country's stability to '$NAME|Y$' which grants ($DESC$)."
 
 ### Stability Events ###
-kr.political.1.t:0 "Downfall in Stability"
-kr.political.1.d:0 "With the lack of political power, our country has destabilised, we're not as stable as before."
-kr.political.1.a:0 "We will overcome this."
+kr.political.1.t:0 "Downfall in Stability!"
+kr.political.1.d:0 "With our recent lack of political power, our country has been weakened, no longer are we very stable."
+kr.political.1.a:0 "All good things must come to an end."
 
-kr.political.2.t:0 "Downfall in Stability"
-kr.political.2.d:0 "With the lack of political power, our country has destabilised a bit, we're now on the brink of instability."
+kr.political.2.t:0 "Downfall in Stability!"
+kr.political.2.d:0 "With our recent lack of political power, our country has been weakened, we're now on the brink of instability."
 kr.political.2.a:0 "Terrible."
 
-kr.political.3.t:0 "Downfall in Stability"
-kr.political.3.d:0 "With the lack of political power, our country has destabilised and needs to recover."
+kr.political.3.t:0 "Downfall in Stability!"
+kr.political.3.d:0 "With our recent lack of political power, our country has been weakened and is now considered to be unstable."
 kr.political.3.a:0 "It's only a temporary situation."
 
-kr.political.4.t:0 "Downfall in Stability"
-kr.political.4.d:0 "With the lack of political power, our country has destabilised even more. Riots and strikes are beginning to shape up everywhere in the country, and the government is struggling to assert its authority."
-kr.political.4.a:0 "That doesn't sound good..."
+kr.political.4.t:0 "Downfall in Stability!"
+kr.political.4.d:0 "With our recent lack of political power, our country has been weakened even more. Riots and strikes are now common place, and our government is struggling to assert its authority."
+kr.political.4.a:0 "This doesn't sound good..."
 
-kr.political.5.t:0 "Downfall in Stability"
-kr.political.5.d:0 "With the lack of political power, our country has plunged into a disaster. The situation is by all means catastrophic, and we're struggling to keep our grasp on the country."
-kr.political.5.a:0 "It's disastrous!"
+kr.political.5.t:0 "Downfall in Stability!"
+kr.political.5.d:0 "With our recent lack of political power, our country has plunged into a disaster. The situation is, by any measure, catastrophic. There is talk of revolution on the streets and people have lost faith in our government. We are struggling to keep our grasp on the country."
+kr.political.5.a:0 "This is disastrous!"
 
-kr.political.6.t:0 "Increase in Stability"
-kr.political.6.d:0 "With our Political Power recovered, we managed to get out of our calamitous situation, our country is on the path of recovery."
+kr.political.6.t:0 "Increase in Stability!"
+kr.political.6.d:0 "With our recent increase of political power, we are beginning to control the situation. However, we are still far from safe."
 kr.political.6.a:0 "Hurrah!"
 
-kr.political.7.t:0 "Increase in Stability"
-kr.political.7.d:0 "With our Political Power recovered, we managed to somewhat stabilise our country but we're not completely out of trouble yet."
-kr.political.7.a:0 "Very good."
+kr.political.7.t:0 "Increase in Stability!"
+kr.political.7.d:0 "With our recent increase of political power, the end is in sight; we are nearly a stable nation."
+kr.political.7.a:0 "So close."
 
-kr.political.8.t:0 "Increase in Stability"
-kr.political.8.d:0 "With our Political Power recovered, we finally got out of the bad situation we were in. Hopefully it won't happen again."
+kr.political.8.t:0 "Increase in Stability!"
+kr.political.8.d:0 "With our recent increase of political power, we are finally stable once more. Hopefully it won't happen again."
 kr.political.8.a:0 "The [Root.GetAdjective] nation is strong."
 
 kr.political.9.t:0 "Potential Increase in Stability"
-kr.political.9.d:0 "With our Political Power gains we now have the chance to improve our stability. \n\nTo get to a higher than average stability level you'll have to take the corresponding law in the stability screen, it will cost 150PP to go one level higher and remember that you can still loose those bonuses after some time if your PP goes below zero. \nDon't worry this message won't fire again."
-kr.political.9.a:0 "Understood."
+kr.political.9.d:0 "With our recent increase of political power we now have the chance to improve our stability. \n\nTo go to a high or very high stability level you'll have to take the corresponding law in the stability screen, it will cost 150PP to go one level higher and remember that you can still loose those bonuses if your PP goes below zero. \nThis message won't fire again, so don't you forget."
+kr.political.9.a:0 "I won't I won't."
 
-#kr.political.10.t:0 "Potential Increase in Stability"
-#kr.political.10.d:0 "With our Political Power gains we have the chance to improve our stability even further. Shall we do it?"
-#kr.political.10.a:0 "Of course!"
-#kr.political.10.b:0 "We don't need that."
-
-### Party Popularity ###
-kr.political.11.t:0 "Very High Party Popularity"
+### Popularity ###
+kr.political.11.t:0 "Very High Popularity"
 kr.political.11.d:0 "The civilian support for the ruling party has reached a very high level which influences our political power."
 kr.political.11.a:0 "Great!"
 
-kr.political.12.t:0 "High Party Popularity"
-kr.political.12.d:0 "The civilian support for the ruling party has reached quite a high level which influences our political power."
+kr.political.12.t:0 "High Popularity"
+kr.political.12.d:0 "The civilian support for the ruling party has reached a high level which influences our political power."
 kr.political.12.a:0 "Nice!"
 
-kr.political.13.t:0 "Average Party Popularity"
+kr.political.13.t:0 "Average Popularity"
 kr.political.13.d:0 "The civilian support for the ruling party is at an average level which influences our political power."
 kr.political.13.a:0 "Good."
 
-kr.political.14.t:0 "Low Party Popularity"
+kr.political.14.t:0 "Low Popularity"
 kr.political.14.d:0 "The civilian support for the ruling party is low which influences our political power."
-kr.political.14.a:0 "That's bad..."
+kr.political.14.a:0 "This is bad..."
 
-kr.political.15.t:0 "Very Low Party Popularity"
+kr.political.15.t:0 "Very Low Popularity"
 kr.political.15.d:0 "The civilian support for the ruling party has reached a very low level which influences our political power."
 kr.political.15.a:0 "It's a catastrophe!"
 
 ### Minister Influences Ruling Party ###
-kr.political.16.t:0 "A Minister supports his Ideology"
-kr.political.16.d:0 "Our current government contains a Minister of a different ideology. This specific person started supporting his own ideology damaging our party popularity. We have to act."
+kr.political.16.t:0 "A Minister Supports His Ideology"
+kr.political.16.d:0 "Our current government contains a Minister of a different ideology. He has started supporting his own ideology which is damaging our party popularity. We must act now if we are to reverse his actions."
 kr.political.16.a:0 "There is nothing we can do."
 kr.political.16.b:0 "Use our influence to revert his efforts."
 
-kr.political.17.t:0 "Our Popularity is rising"
-kr.political.17.d:0 "Due to his popular policies, one of our loyal ministers has managed to strengthen our ideology. With some additional influence we could increase our popularity."
+kr.political.17.t:0 "Our Ideology Has Grown"
+kr.political.17.d:0 "Due to his popular policies, one of our loyal ministers has managed to strengthen our ideology. With some additional influence we could use this to increase our popularity."
 kr.political.17.a:0 "Excellent."
 kr.political.17.b:0 "We don't need this."
 
-kr.political.18.t:0 "Our Popularity is rising"
-kr.political.18.d:0 "Due to his popular policies, one of our loyal ministers has managed to strengthen our ideology. With some additional influence we could increase our popularity."
+kr.political.18.t:0 "Our Ideology Has Grown"
+kr.political.18.d:0 "Due to his popular policies, one of our loyal ministers has managed to strengthen our ideology. With some additional influence we could use this to increase our popularity."
 kr.political.18.a:0 "Excellent."
 kr.political.18.b:0 "We don't need this."
 
-kr.political.19.t:0 "Our Popularity is rising"
-kr.political.19.d:0 "Due to his popular policies, one of our loyal ministers has managed to strengthen our ideology. With some additional influence we could increase our popularity."
+kr.political.19.t:0 "Our Ideology Has Grown"
+kr.political.19.d:0 "Due to his popular policies, one of our loyal ministers has managed to strengthen our ideology. With some additional influence we could use this to increase our popularity."
 kr.political.19.a:0 "Excellent."
 kr.political.19.b:0 "We don't need this."
 
-kr.political.20.t:0 "Our Popularity is rising"
-kr.political.20.d:0 "Due to his popular policies, one of our loyal ministers has managed to strengthen our ideology. With some additional influence we could increase our popularity."
+kr.political.20.t:0 "Our Ideology Has Grown"
+kr.political.20.d:0 "Due to his popular policies, one of our loyal ministers has managed to strengthen our ideology. With some additional influence we could use this to increase our popularity."
 kr.political.20.a:0 "Excellent."
 kr.political.20.b:0 "We don't need this."
 
 kr.political.21.t:0 "A Minister supports his Ideology"
-kr.political.21.d:0 "Our current government contains a Minister of a different ideology. This specific person started supporting his own ideology damaging our party popularity. We have to act."
+kr.political.21.d:0 "Our current government contains a Minister of a different ideology. He has started supporting his own ideology which is damaging our party popularity. We must act now if we are to reverse his actions."
 kr.political.21.a:0 "There is nothing we can do."
 kr.political.21.b:0 "Use our influence to revert his efforts."
 
 kr.political.22.t:0 "A Minister supports his Ideology"
-kr.political.22.d:0 "Our current government contains a Minister of a different ideology. This specific person started supporting his own ideology damaging our party popularity. We have to act."
+kr.political.22.d:0 "Our current government contains a Minister of a different ideology. He has started supporting his own ideology which is damaging our party popularity. We must act now if we are to reverse his actions."
 kr.political.22.a:0 "There is nothing we can do."
 kr.political.22.b:0 "Use our influence to revert his efforts."
 
 kr.political.23.t:0 "A Minister supports his Ideology"
-kr.political.23.d:0 "Our current government contains a Minister from a party of a different ideology. This specific person started supporting his own ideology, damaging our party popularity. We have to act."
+kr.political.23.d:0 "Our current government contains a Minister of a different ideology. He has started supporting his own ideology which is damaging our party popularity. We must act now if we are to reverse his actions."
 kr.political.23.a:0 "There is nothing we can do."
 kr.political.23.b:0 "Use our influence to revert his efforts."
 
@@ -180,6 +175,6 @@ kr.political.28.b:0 "Only inform me about major events."
 kr.political.28.c:0 "I want none of this nonsense."
 
 ### Remove Independent War ###
-kr.political.30.t:0 "End of our independent war"
+kr.political.30.t:0 "End of Our Independent War"
 kr.political.30.d:0 "Now that our independent war is over we can call our allies to war again."
-kr.political.30.a:0 "Okay"
+kr.political.30.a:0 "Understood"
