And spelling fixes

--- a/localisation/KR_Hawaii_l_english.yml
+++ b/localisation/KR_Hawaii_l_english.yml
@@ -60,7 +60,7 @@ HAW_navy_desc:0 "We are an island nation and surrounded by water. For us to surv
 HAW_submarine_doctrines:0 "Submarine Doctrines"
 HAW_submarine_doctrines_desc:0 "Some within the navy suggest that the best way for the navy to operate is to rely on Submarines. Submarines were proven to be an effective tool of war during the First Weltkrieg and we would be foolish not to use them."
 HAW_submarine_focus:0 "Submarine Focus"
-HAW_submarine_focus_desc:0 "As part of our plan to focus on Submarines we should work on building up and modernizing our Submarine fleet so that way no one can avoid attack our islands. "
+HAW_submarine_focus_desc:0 "As part of our plan to focus on Submarines we should work on building up and modernising our Submarine fleet so that way no one can avoid attack our islands. "
 HAW_grand_navy:0 "Hawai'ian Grand Navy"
 HAW_grand_navy_desc:0 "Many of the admirals were part of the United States Asiatic Fleet before the chaos of the civil war engulfed the mainland. Now that we are independent many of them suggest making the Hawai'ian navy a grand navy."
 HAW_escorts:0 "Protecting our Trade"
@@ -68,29 +68,30 @@ HAW_escorts_desc:0 "Regardless of the naval plan that we go with we need to have
 HAW_hawaiian_marines:0 "Hawai'ian Marines"
 HAW_hawaiian_marines_desc:0 "We have a number of people whom were trained in the United States Marine Corps in our island and they have come wishing to create the Hawai'ian Marines. Hawai'i as an island nation will need her own marine corp to help defend the many islands that make up our country. "
 HAW_improve_our_fleet:0 "Improve Our Fleet"
-HAW_improve_our_fleet_desc:0 "As our grand navy improves we need to modernize and improve our fleet. Hawai'i deserves the best navy that we can produce. A large and grand navy will do just fine for our island nation."
+HAW_improve_our_fleet_desc:0 "As our grand navy improves we need to modernise and improve our fleet. Hawai'i deserves the best navy that we can produce. A large and grand navy will do just fine for our island nation."
 HAW_fleet_in_being:0 "Fleet in Being"
 HAW_fleet_in_being_desc:0 "Our navy should be prepared to meet any and all the enemies of Hawai'i out at sea and destroy them without them ever arriving near our islands and force them to flee back to their home ports."
 HAW_trade_interdiction:0 "Trade Interdiction"
 HAW_trade_interdiction_desc:0 "As we lie in the middle of the Pacific and trade flows through our area if we are to go to war we should focus on crippling the trade of the enemies of Hawai'i. This can help stop any potential invasion of our islands."
 HAW_carriers:0 "Carrier Support"
-HAW_carriers_desc:0 "With our navy being modernized, time has come to focus on Aircraft Carriers. Carriers will be one of the major tools of defending our island from attack. "
+HAW_carriers_desc:0 "With our navy being modernised, time has come to focus on Aircraft Carriers. Carriers will be one of the major tools of defending our island from attack. "
 
 ### Army Foci ###
 HAW_army:0 "Hawai'ian National Guard"
 HAW_army_desc:0 "We shall form the Hawai'ian National Guard. While Hawai'i will not be an expansionist power we will train the people to better defend our islands from any threat that comes and so that Hawai'i remains free from all enemies. "
 HAW_focus_on_planning:0 "Joint Chiefs of Staff"
-HAW_focus_on_planning_desc:0 "The main battle strategy of defending Hawai'i will be a joint chiefs of staff. They shall convene and plan out any and all defenses for Hawai'i. "
+HAW_focus_on_planning_desc:0 "The main battle strategy of defending Hawai'i will be a joint chiefs of staff. They shall convene and plan out any and all defences for Hawai'i. "
 HAW_superior_fire_power:0 "Superior Fire-Power"
 HAW_superior_fire_power_desc:0 "Hawaii may be a set of individual islands but we have spirit and we shall fight hard. To that end we should rely on the doctrine of Superior Fire-power to defend our islands. We can make and import guns, artillery and ammunition but our lives are expensive. So let us save Hawai'ian lives through superior firepower."
-HAW_honolulu_rifles:0 "Modernized Guns"
-HAW_honolulu_rifles_desc:0 "As we build up our army we should focus on modernizing our guns and building up domestic firearm trade. This will help make sure that we have the best guns that we can have for our troops. "
+HAW_honolulu_rifles:0 "Modernised Guns"
+HAW_honolulu_rifles_desc:0 "As we build up our army we should focus on modernising our guns and building up domestic firearm trade. This will help make sure that we have the best guns that we can have for our troops. "
 HAW_military_factories:0 "Domestic Firearm Trade"
 HAW_military_factories_desc:0 "To protect Hawai'i we should focus on building up our domestic firearm and military trade. With native Hawai'ian military industries we will be able to better defend our country from any invasion."
 HAW_strategic_information_services:0 "Strategic Information Services"
 HAW_strategic_information_services_desc:0 "To protect the islands we should form the Strategic Information Services. They shall be our intelligence services and will help make sure that no saboteurs shall come to our islands."
 HAW_new_army:0 "A Modern Army"
-HAW_new_army_desc:0 "To build and modernize our army further we shall work on researching modern firearms for our soldiers. As the wars advance we shall keep up with the times to keep our islands safe. "
+HAW_new_army_desc:0 "To build and modernise our army further we shall work on researching modern firearms for our soldiers. As the wars advance we shall keep up with the times to keep our islands safe."
+
 ### Air Foci ###
 HAW_airforce:0 "Hawai'ian Air-Force"
 HAW_airforce_desc:0 "To help defend our islands we shall create the Hawai'ian Air Force. The Airforce shall keep our skies free from any and all threats to our islands. "
@@ -111,9 +112,9 @@ HAW_radar_desc:0 "We need to focus on Several Warning systems to help better pro
 
 ### Foreign Policy Foci ###
 HAW_foreign:0 "Foreign Policy"
-HAW_foreign_desc:0 "Now that our government has been finalized we should look to the future and seek allies to protect our Nation. Hawai'i is small and many larger nations would find it easy to conquer us. To avoid that we should seek allies. "
+HAW_foreign_desc:0 "Now that our government has been finalised we should look to the future and seek allies to protect our Nation. Hawai'i is small and many larger nations would find it easy to conquer us. To avoid that we should seek allies. "
 HAW_american_protectorate:0 "American Protectorate"
-HAW_american_protectorate_desc:0 "Before the civil war on the mainland, Hawai'i was part of the United States as a territory. While we shall remain a free and independent nation we should work with the newely created League of American States."
+HAW_american_protectorate_desc:0 "Before the civil war on the mainland, Hawai'i was part of the United States as a territory. While we shall remain a free and independent nation we should work with the newly created League of American States."
 HAW_american_business:0 "American Business Ties"
 HAW_american_business_desc:0 "Now that we are members of the League of American States we should forge better economic ties with the Americans. This will help the economy of both Hawai'i and America. "
 HAW_american_freindship:0 "American Friendship"
@@ -129,7 +130,7 @@ HAW_international_ties_desc:0 "As we have just recently had our revolution it wo
 HAW_international_tech_sharing:0 "Join the Phalanstere"
 HAW_international_tech_sharing_desc:0 "Now that we are full and respected members of the International, we should do our small part to help advance the science of the world by joining the Phalanstere. "
 HAW_join_canada:0 "Join the Entente"
-HAW_join_canada_desc:0 "We should ally with the Canadians and their Entente. We have always had good relations with the british and we should further that bond by joining the Entente. "
+HAW_join_canada_desc:0 "We should ally with the Canadians and their Entente. We have always had good relations with the British and we should further that bond by joining the Entente. "
 HAW_entente_business:0 "Entente Business Ties"
 HAW_entente_business_desc:0 "To Further our ties with the members of the Entente we should sign a trade agreement. This will help the various members of the British Empire and Hawai'i both prosper."
 HAW_entente_friendship:0 "Entente Friendship"
