Carlists: Invite Croatia replaced with Invite Illyira

--- a/localisation/KR_Spain_Carlist_l_english.yml
+++ b/localisation/KR_Spain_Carlist_l_english.yml
@@ -41,7 +41,7 @@ CAR_education_focus:0 "Centro de Estudios Universitarios"
 
 CAR_foreign_focus:0 "Renew the Mediterranean Bloc"
 CAR_invite_italy:0 "Invite Italy"
-CAR_invite_croatia:0 "Invite Croatia"
+CAR_invite_illyria:0 "Invite Illyria"
 CAR_invite_portugal:0 "Invite Portugal"
 CAR_invite_france:0 "Invite France"
 CAR_french_restoration:0 "Bring France back to the Continent"
@@ -92,8 +92,8 @@ carfor.413.t:0 "The Italian Federation refuses"
 carfor.413.d:0 "The Italian Federation has decided to not join our faction."
 carfor.413.a:0 "Fools."
 
-carfor.420.t:0 "The Mediterranean Bloc: Croatia"
-carfor.420.d:0 "We have maintained positive diplomatic relations with Croatia even before Javier ascended to the throne. Now, we shall formally propose an alliance."
+carfor.420.t:0 "The Mediterranean Bloc: Illyria"
+carfor.420.d:0 "We have maintained positive diplomatic relations with Illyria even before Javier ascended to the throne. Now, we shall formally propose an alliance."
 carfor.420.a:0 "We await their response."
 
 carfor.421.t:0 "Invitation to the Mediterranean Bloc"
@@ -101,12 +101,12 @@ carfor.421.d:0 "After the end of the Spanish Civil War, Carlist Spain has propos
 carfor.421.a:0 "We must join in their cause!"
 carfor.421.b:0 "Just observe them..."
 
-carfor.422.t:0 "Croatia joins the Mediterranean Bloc"
-carfor.422.d:0 "Croatia has decided to join our faction."
+carfor.422.t:0 "Illyria joins the Mediterranean Bloc"
+carfor.422.d:0 "Illyria has decided to join our faction."
 carfor.422.a:0 "Splendid."
 
-carfor.423.t:0 "Croatia refuses"
-carfor.423.d:0 "Croatia has decided to not join our faction."
+carfor.423.t:0 "Illyria refuses"
+carfor.423.d:0 "Illyria has decided to not join our faction."
 carfor.423.a:0 "Fools."
 
 carfor.430.t:0 "The Mediterranean Bloc: Portugal"
