--- a/localisation/KR_USA_l_english.yml
+++ b/localisation/KR_USA_l_english.yml
@@ -418,7 +418,7 @@ usa_cw_very_low:0 "American Civil War"
 usa_cw_low:0 "American Civil War"
 usa_cw_average:0 "American Civil War"
 USA_great_depression:0 "The Great Depression"
-USA_great_depression_desc:0 "Since the collapse of the New York Stock Market in 1926, the United States has been gripped by the Great Depression. In addition to the massive economic woes plaguing America from this never-ending crisis; the Great Depression has given energy to both Long and Reed as they campaign against one another and the establishment."
+USA_great_depression_desc:0 "Since the collapse of the New York Stock Market in 1925, the United States has been gripped by the Great Depression. In addition to the massive economic woes plaguing America from this never-ending crisis; the Great Depression has given energy to both Long and Reed as they campaign against one another and the establishment."
 USA_black_monday:0 "The Great Depression"
 USA_black_monday_desc:0 "The Great Depression which has been gripping America for over a decade looked to be slowly recovering under the hoover administration, though no where near fast enough. However the recent collapse of the Berlin Stock Market has just made the Great Depression even worse. Only God and the next President knows when this can be over."
 USA_worst_is_over:0 "The Worst is over"
@@ -482,7 +482,7 @@ USA_american_trade:0 "American Trade Relations"
 
 ### Events ###
 ustates.501.t:0 "America in 1936"
-ustates.501.d:0 "The United States in 1936 stands in crisis. The United States was able to escape in the first weltkrieg. Which allowed its prosperity to continue well into the 1920s. However the victory by the German Empire and the French and later British Revolutions would lead to the wall street crash of 1926. This sent the United States into the Great Depression and allowed the Berlin Stock Market to take its place in the world. The election of Herbert Hoover in 1928 showed promise of fixing America, however Hoover was unable to fix the problems of the Depression. This has fueled the rise of radical parties in America from the Combined Syndicates of America on the Far Left and the American First Party on the Far Right. The fact that Hoover won re-election by the House of Representatives in 1932 and the fact that the Great Depression isn't over means that the problems do not look to be going away soon. Many throughout the country fear that disaster will happen should one of the extreme parties come into power or nothing is done to solve the Depression. "
+ustates.501.d:0 "The United States in 1936 stands in crisis. The United States was able to escape in the first weltkrieg. Which allowed its prosperity to continue well into the 1920s. However the victory by the German Empire and the French and later British Revolutions would lead to the wall street crash of 1925. This sent the United States into the Great Depression and allowed the Berlin Stock Market to take its place in the world. The election of Herbert Hoover in 1928 showed promise of fixing America, however Hoover was unable to fix the problems of the Depression. This has fueled the rise of radical parties in America from the Combined Syndicates of America on the Far Left and the American First Party on the Far Right. The fact that Hoover won re-election by the House of Representatives in 1932 and the fact that the Great Depression isn't over means that the problems do not look to be going away soon. Many throughout the country fear that disaster will happen should one of the extreme parties come into power or nothing is done to solve the Depression. "
 ustates.501.a:0 "God Save America!"
 
 ustates.1.t:0 "A Day In September"
@@ -548,8 +548,6 @@ ustates.14.f:0 "Hooray for the Jedediah Smith Dam!"
 ustates.157.t:0 "The Constitutional Ban"
 ustates.157.d:0 "MacArthur was prepared for extreme action in dealing with both the America First Party and Combined Syndicates. He attacked both parties as being prepared to use the election to destroy the American constitution and thus prepared to pass an act to ban both the parties from participating in the election. The act would remove both the political parties from being legitimate entities and any action that they progressed with would be seen as an act of treason."
 ustates.157.a:0 "Pass the act."
-ustates.157.b:0 "We will have open elections."
-ustates.157.c:0 "Pass the Emergency Security Act."
 
 ustates.15.t:0 "The Crackdown"
 ustates.15.d:0 "After passing the act MacArthur moved to defeat the groups that had been causing the most problems for the country. He declared a nationwide crackdown against all movements were seen as being against American democracy. He was first concentrating in the east where both the America First and CSA were most prominent."
@@ -596,13 +594,11 @@ ustates.23.b:0 "Pull out the troops"
 
 ustates.24.t:0 "Chaos in America"
 ustates.24.d:0 "With the withdrawal of his troops, MacArthur had lost control of the country and armed militia units were popping up to defy the United States"
-ustates.24.a:0 "Depose MacArthur"
-ustates.24.b:0 "He will pull through"
+ustates.24.a:0 "Ready the Troops to defend America!"
 
 ustates.25.t:0 "The Days of Violence"
 ustates.25.d:0 "The days leading up the election were marred by violence as both the America First and CSA protested their ban from the election. Anarchist groups attacked government buildings and America First supporters denounced the election as nothing more than a joke. While Reed and the CSA threatened a general strike if the election did not include them, the America First rallied around Long who used his position in the senate to demand his inclusion in the election."
 ustates.25.a:0 "The ban stands!"
-ustates.25.b:0 "Lift the ban."
 
 ustates.26.t:0 "Declaration of Martial Law"
 ustates.26.d:0 "To get control of the situation, MacArthur declared Martial Law. Martial Law caused a serious amount of dissent as barricade began going up throughout the country."
