More spelling and readability fixes

--- a/localisation/KR_Companies_l_english.yml
+++ b/localisation/KR_Companies_l_english.yml
@@ -32,7 +32,7 @@ yerevan_state_university:0 "Yerevan State University"
 amalgamated_wireless_australasia:0 "Amalgamated Wireless Australasia"
 broken_hill:0 "Broken Hill Proprietary Company Ltd."
 commonwealth_oil_refineries:0 "Commonwealth Oil Refineries"
-lysaghts_works_kr:0 "Lysaght’s Works"
+lysaghts_works_kr:0 "Lysaght's Works"
 colonial_ammunition_company:0 "Colonial Ammunition Company"
 royal_australian_artillery:0 "Royal Australian Artillery"
 holden:0 "Holden"
