--- a/localisation/KR_Xibei_San_Ma_l_english.yml
+++ b/localisation/KR_Xibei_San_Ma_l_english.yml
@@ -15,9 +15,9 @@ XSM_Assembly:0 "Xibei San Ma Assembly"
 #XSM_social_democrat_party:0 "SDL"
 #XSM_social_democrat_party_long:0 "Social Democratist Leage"
 #XSM_social_liberal_party:0 "SLL"
-#XSM_social_liberal_party_long:0 "Social Liberalist Leage"
+#XSM_social_liberal_party_long:0 "Social Liberal Leage"
 #XSM_market_liberal_party:0 "MLL"
-#XSM_market_liberal_party_long:0 "market Liberalist Leage"
+#XSM_market_liberal_party_long:0 "Market Liberal Leage"
 #XSM_social_conservative_party:0 "Inteelctualists"
 #XSM_social_conservative_party_long:0 "Intelectualist Faction"
 #XSM_authoritarian_democrat_party:0 "MP"
@@ -30,10 +30,6 @@ XSM_Assembly:0 "Xibei San Ma Assembly"
 ### Opinion Modifiers ###
 RUS_SIZE_TRANSIBERIAN:0 "Russia seizes the Trans-Siberian lands"
 RUS_NOT_SIZE_TRANSIBERIAN:0 "Russia don't seize the Trans-Siberian lands"
-
-### Tech Teams ###
-
-### Foci ###
 
 ### Events ###
 xibei.0.t:0 "The Land of the Mas"
@@ -108,7 +104,7 @@ xibei.17.b:0 "Ma Lin will bring experience."
 xibei.17.c:0 "Ma Zhongying is young and eager to learn."
 xibei.17.e:0 "Ma Bufang will help modernise and rule."
 xibei.18.t:0 "The failed assembly - What now?"
-xibei.18.d:0 "The Xining assembly has only split our Federation apart, with several leaders seeing the Federation as a thing of the past. We must act, if we wish to centralize, but what do we do?"
+xibei.18.d:0 "The Xining assembly has only split our Federation apart, with several leaders seeing the Federation as a thing of the past. We must act, if we wish to centralise, but what do we do?"
 xibei.18.a:0 "Promise to roll back any reforms in exchange of peace!"
 xibei.18.b:0 "If they want to fight, let them!"
 xibei.19.t:0 "Ma Hongkui has won the civil war."
