--- a/localisation/KR_Countries_l_english.yml
+++ b/localisation/KR_Countries_l_english.yml
@@ -744,9 +744,9 @@ BOT_national_populist:0 "Tswana Protectorate"
 BOT_national_populist_ADJ:0 "Botswanian"
 BOT_national_populist_DEF:0 "Tswana Protectorate"
 
-BRA_totalist:0 "totalist Brazil"
+BRA_totalist:0 "Totalist Brazil"
 BRA_totalist_ADJ:0 "Brazilian"
-BRA_totalist_DEF:0 "totalist Brazil"
+BRA_totalist_DEF:0 "Totalist Brazil"
 BRA_syndicalist:0 "United Communes of Brazil"
 BRA_syndicalist_ADJ:0 "Brazilian"
 BRA_syndicalist_DEF:0 "The United Communes of Brazil"
@@ -1039,7 +1039,7 @@ CAR_social_liberal:0 "Carlist Kingdom of Spain"
 CAR_social_liberal_ADJ:0 "Carlist-Spanish"
 CAR_social_liberal_DEF:0 "The Carlist Kingdom of Spain"
 CAR_market_liberal:0 "Carlist Kingdom of Spain"
-CAR_market_liberal_ADJ:0 "Carlist Spanish"
+CAR_market_liberal_ADJ:0 "Carlist-Spanish"
 CAR_market_liberal_DEF:0 "The Carlist Kingdom of Spain"
 CAR_social_conservative:0 "Carlist Kingdom of Spain"
 CAR_social_conservative_ADJ:0 "Carlist-Spanish"
