--- a/localisation/KR_Political_l_english.yml
+++ b/localisation/KR_Political_l_english.yml
@@ -14,6 +14,7 @@ good_stability_desc:0 "If your political power is above §Y150§! you will be ab
 very_good_stability:0 "Very Good Stability"
 very_good_stability_desc:0 "If your political power is above §Y150§! and you are at Good Stability you will be able to go up to Very Good Stability. You'll go straight down to average stability if you let your political power go under §Y0§!."
 stability:0 "Stability"
+EFFECT_CHANGE_LAW_stability:0 "Change our country's stability to '$NAME|Y$' which grants ($DESC$)."
 
 ### Popularity ###
 very_low_popularity:0 "Very Low Popularity"
@@ -36,9 +37,6 @@ bad_economy:0 "Bad Economy WIP!!!"
 bust_economy:0 "Bust Economy WIP!!!"
 crash_economy:0 "Crash Economy WIP!!!"
 economic_health:0 "Economic Health WIP!!!"
-
-### Stability Effect ###
-EFFECT_CHANGE_LAW_stability:0 "Change our country's stability to '$NAME|Y$' which grants ($DESC$)."
 
 ### Stability Events ###
 kr.political.1.t:0 "Downfall in Stability!"
@@ -77,7 +75,7 @@ kr.political.9.t:0 "Potential Increase in Stability"
 kr.political.9.d:0 "With our recent increase of political power we now have the chance to improve our stability. \n\nTo go to a high or very high stability level you'll have to take the corresponding law in the stability screen, it will cost 150PP to go one level higher and remember that you can still loose those bonuses if your PP goes below zero. \nThis message won't fire again, so don't you forget."
 kr.political.9.a:0 "I won't I won't."
 
-### Popularity ###
+### Popularity Events ###
 kr.political.11.t:0 "Very High Popularity"
 kr.political.11.d:0 "The civilian support for the ruling party has reached a very high level which influences our political power."
 kr.political.11.a:0 "Great!"
@@ -98,7 +96,7 @@ kr.political.15.t:0 "Very Low Popularity"
 kr.political.15.d:0 "The civilian support for the ruling party has reached a very low level which influences our political power."
 kr.political.15.a:0 "It's a catastrophe!"
 
-### Minister Influences Ruling Party ###
+### Minister Influences Ruling Party Events ###
 kr.political.16.t:0 "A Minister Supports His Ideology"
 kr.political.16.d:0 "Our current government contains a Minister of a different ideology. He has started supporting his own ideology which is damaging our party popularity. We must act now if we are to reverse his actions."
 kr.political.16.a:0 "There is nothing we can do."
@@ -174,7 +172,7 @@ kr.political.28.a:0 "I want to know everything, EVERYTHING!"
 kr.political.28.b:0 "Only inform me about major events."
 kr.political.28.c:0 "I want none of this nonsense."
 
-### Remove Independent War ###
+### Remove Independent War Event ###
 kr.political.30.t:0 "End of Our Independent War"
 kr.political.30.d:0 "Now that our independent war is over we can call our allies to war again."
 kr.political.30.a:0 "Understood"
