Added events for Afghanistan ( Flags are currently broken, and I don't know why)

--- a/localisation/KR_Countries_l_english.yml
+++ b/localisation/KR_Countries_l_english.yml
@@ -58,7 +58,7 @@ AFG_authoritarian_democrat_DEF:0 "The Emirate of Afghanistan"
 AFG_paternal_autocrat:0 "Emirate of Afghanistan"
 AFG_paternal_autocrat_ADJ:0 "Afghan"
 AFG_paternal_autocrat_DEF:0 "The Emirate of Afghanistan"
-AFG_national_populist:0 "Emirate of Afghanistan"
+AFG_national_populist:0 "Islamic State of Afghanistan"
 AFG_national_populist_ADJ:0 "Afghan"
 AFG_national_populist_DEF:0 "The Emirate of Afghanistan"
 
