--- a/localisation/factions_l_english.yml
+++ b/localisation/factions_l_english.yml
@@ -20,3 +20,4 @@ south_west_pacific_initiative:0 "The South-West Pacific Initiative"
 north_american_alliance:0 "North-American Alliance"
 northern_sovereignty_coalition:0 "Northern Sovereignty Coalition"
 SAF_faction_uotap:0 "African People's Union"
+bukhara_kabul_pact:0 "Bukhara-Kabul Pact"
