fixed Crete's flags and cosmetic tags

--- a/localisation/KR_Countries_l_english.yml
+++ b/localisation/KR_Countries_l_english.yml
@@ -1395,6 +1395,37 @@ COS_national_populist:0 "Costa Rica"
 COS_national_populist_ADJ:0 "Costa Rican"
 COS_national_populist_DEF:0 "Costa Rica"
 
+CRE_totalist:0 "Crete"
+CRE_totalist_ADJ:0 "Cretan"
+CRE_totalist_DEF:0 "Crete"
+CRE_syndicalist:0 "Crete"
+CRE_syndicalist_ADJ:0 "Cretan"
+CRE_syndicalist_DEF:0 "Crete"
+CRE_radical_socialist:0 "Crete"
+CRE_radical_socialist_ADJ:0 "Cretan"
+CRE_radical_socialist_DEF:0 "Crete"
+CRE_social_democrat:0 "Crete"
+CRE_social_democrat_ADJ:0 "Cretan"
+CRE_social_democrat_DEF:0 "Crete"
+CRE_social_liberal:0 "Crete"
+CRE_social_liberal_ADJ:0 "Cretan"
+CRE_social_liberal_DEF:0 "Crete"
+CRE_market_liberal:0 "Crete"
+CRE_market_liberal_ADJ:0 "Cretan"
+CRE_market_liberal_DEF:0 "Crete"
+CRE_social_conservative:0 "Crete"
+CRE_social_conservative_ADJ:0 "Cretan"
+CRE_social_conservative_DEF:0 "Crete"
+CRE_authoritarian_democrat:0 "Crete"
+CRE_authoritarian_democrat_ADJ:0 "Cretan"
+CRE_authoritarian_democrat_DEF:0 "Crete"
+CRE_paternal_autocrat:0 "Crete"
+CRE_paternal_autocrat_ADJ:0 "Cretan"
+CRE_paternal_autocrat_DEF:0 "Crete"
+CRE_national_populist:0 "Crete"
+CRE_national_populist_ADJ:0 "Cretan"
+CRE_national_populist_DEF:0 "Crete"
+
 CRO_totalist:0 "Socialist Republic of Croatia
 CRO_totalist_ADJ:0 "Croatian"
 CRO_totalist_DEF:0 "The Socialist Republic of Croatia
