--- a/localisation/KR_Countries_Cosmetic_l_english.yml
+++ b/localisation/KR_Countries_Cosmetic_l_english.yml
@@ -1835,6 +1835,14 @@ MOR_GER_subject:0 "Freistaat Marokko"
 MOR_GER_subject_ADJ:0 "Marokkan"
 MOR_GER_subject_DEF:0 "Freistaat Marokko"
 
+CRE_GER_subject:0 "Cretan State"
+CRE_GER_subject_DEF:0 "The Cretan State"
+CRE_GRE_subject:0 "Cretan State"
+CRE_GRE_subject_DEF:0 "The Cretan State"
+CRE_OTT_subject:0 "Cretan Vilayet"
+CRE_OTT_subject_DEF:0 "The Cretan Vilayet"
+
+
 ##############
 #Vanilla
 ##############
