Added some parties localisation here and there.

--- a/localisation/KR_Portugal_l_english.yml
+++ b/localisation/KR_Portugal_l_english.yml
@@ -21,6 +21,16 @@ ignored_goa:0 "Ignored Goa"
 ### National Spirits ###
 POR_secret_police:0 "Polícia Internacional e de Defesa do Estado"
 
+### Parties ###
+POR_totalist_party:0 "PSP"
+POR_totalist_party_long:0 "Partido Sindicalista"
+POR_syndicalist_party:0 "UAP"
+POR_syndicalist_party_long:0 "Uniгo Anarquista Portuguesa"
+POR_paternal_autocrat_party:0 "Estado Novo"
+POR_paternal_autocrat_party_long:0 "Estado Novo"
+POR_national_populist_party:0 "Integralistas"
+POR_national_populist_party_long:0 "Integralistas"
+
 ### Events ###
 por.1.t:0 "Portugal"
 por.1.d:0 "We have annexed Portugal and while hardliners are calling for an occupation the majority of our government officials wish to reestablish the nation under our watch."
