--- a/localisation/KR_Afghanistan_l_english.yml
+++ b/localisation/KR_Afghanistan_l_english.yml
@@ -92,8 +92,22 @@ afg.17.b:0 "Cave in to the traditionalists and abbandon all pretense of modernit
 afg.17.c:0 "I shall succeed where Amanullah failed and bring Afghanistan into the modern world!"
 
 ### Parties ###
+AFG_totalist_party:0 "PIF"
+AFG_totalist_party_long:0 "Pro-Internationale Faction"
+AFG_syndycalist_party:0 "PIF"
+AFG_syndycalist_party_long:0 "Pro-Internationale Faction"
+AFG_radical_socialist_party:0 "RW"
+AFG_radical_socialist_party_long:0 "Radical Westernisers"
+AFG_social_democrat_party:0 "PWF"
+AFG_social_democrat_party_long:0 "Pro-Western Faction"
+AFG_social_liberal_party:0 "PWF"
+AFG_social_liberal_party_long:0 "Pro-Western Faction"
+AFG_market_liberal_party:0 "PWF"
+AFG_market_liberal_party_long:0 "Pro-Western Faction"
 AFG_social_conservative_party:0 "AF"
 AFG_social_conservative_party_long:0 "Academic Faction"
+AFG_authoritarian_democrat_party:0 "RG"
+AFG_authoritarian_democrat_long:0 "Royal Government"
 AFG_paternal_autocrat_party:0 "RG"
 AFG_paternal_autocrat_party_long:0 "Royal Government"
 AFG_national_populist_party:0 "RI"
