Some loc fixes for SAF

--- a/localisation/KR_South_Africa_l_english.yml
+++ b/localisation/KR_South_Africa_l_english.yml
@@ -199,13 +199,13 @@ SAF_implement_federation_desc:0 "While we have been calling ourserves the South 
 ### Ideas ###
 
 racial_segregation:0 "Racial Segregation"
-racial_segregation_desc:0 "South Africa is a divided nation. While the vast majority of the population belong to the various native ethnic African groups, socio-economic power is held by the white European minority. This in turn is divided between the Afrikaners, Dutch speaking decedents of the original Dutch colonists and the Boers who settled the Transvall and Orange Free State, and the British, who form the majority of the white population in Natal and Rhodesia."
+racial_segregation_desc:0 "South Africa is a divided nation. While the vast majority of the population belongs to the various native ethnic African groups, socio-economic power is held by the white European minority. This in turn is divided between the Afrikaners, Dutch-speaking descendants of the original Dutch colonists and the Boers who settled the Transvall and Orange Free State, and the British who form the majority of the white population in Natal and Rhodesia."
 
 racial_segregation_apartheid:0 "Apartheid"
-racial_segregation_apartheid_desc:0 "South Africa is a divided nation. While the vast majority of the population belong to the various native ethnic African groups, socio-economic power is held by the white European minority. The recent implemention of the Apartheird has excarberated tensions, but has also allowed the state to brutally expand its conscription, along with the need for a larger law enforcement force."
+racial_segregation_apartheid_desc:0 "South Africa is a divided nation. While the vast majority of the population belong to the various native ethnic African groups, socio-economic power is held by the white European minority. The recent implemention of the Apartheird has excarberated tensions, but has also allowed the state to brutally expand its conscription to fit the need for a larger law enforcement force."
 
 paramount_chiefs:0 "Paramount Chiefs"
-paramount_chiefs_desc:0 "We have left a great deal of autonomy to the newly integrated HCT regions. This and the goodwill of the new Paramount Chiefs ensures political and economical stability in the Native lands for the years to come."
+paramount_chiefs_desc:0 "We have left a great deal of autonomy to the newly integrated HCTs. This and the goodwill of the new Paramount Chiefs ensures political and economical stability in the Native lands for the years to come."
 
 local_paramount_chiefs:0 "Local Native Development"
 local_paramount_chiefs_desc:0 "We have limited Native development efforts to the regions where the Paramount Chiefs operate. This however limits their impact on the development of the country's industrial output."
